add images to 25

--- a/content/4-case-studies/25.md
+++ b/content/4-case-studies/25.md
@@ -55,12 +55,13 @@ To learn more about the deterioration of the collection, I needed more informati
 ### Themes in the Collection
 
 I was mimicking comic scenes. There was a magazine that everyone loved called *Jeunes pour jeunes*, and I would copy scenes from it and sell the drawings to my friends at school. But I told myself that drawing didn’t allow me to earn much more money, so maybe I should do painting. Editors were looking for somebody who used a style that could be found in billboards in their paintings, and what I was doing was putting writing in my paintings.
-
 I named this kind of style the Sambain style. It meant paintings with writing. It seems that before me, such paintings didn’t exist. Each of us has to have a specific style and be considered as a model, and my aim was to make what hasn’t been made before. I noticed that people who were walking in the street didn’t stop to look at the paintings, so I had to find a way to catch people’s attention, to be more attractive. The real connoisseurs, my audience, was in the street. Especially those who stood in front of my paintings for a long time. If they read more slowly than me, they would stay a lot of time in front of it, so it was a success! What I’m interested in is to call conscience to mind and to give a moral meaning. I paint a reality that everybody knows. If it leads me to getting arrested because I tell the truth, it doesn’t upset me, because this is what I want to paint.
 
 —Chéri Samba ([[Our Choices Art 2017]])
 
-The museum’s collection features famous self-educated artists such as Ange Kumbi, Chéri Samba, Tshibumba Shula, Moke, Cheri Cherin, as well as others from the Academy of Fine Arts, including Thango and Lubaki. The paintings by self-educated artists depict historical and moral topics ([**fig. 25.1**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-1)) as well as the daily life of the Congolese. The subjects represent the real lives of people: colonialism, prostitution, scenes of violence, AIDS and other diseases, political views, and the opinions, feelings, and sensitivities of people, as well as moments of daily life—a visit to the hairdresser, an argument between a husband and his wife, a battle against mosquitoes, and many more quotidian scenes. They also show the humor in some situations.
+The museum’s collection features famous self-educated artists such as Ange Kumbi, Chéri Samba, Tshibumba Shula, Moke, Cheri Cherin, as well as others from the Academy of Fine Arts, including Thango and Lubaki. The paintings by self-educated artists depict historical and moral topics ([fig. 25.1](#fig-25-1)) as well as the daily life of the Congolese. The subjects represent the real lives of people: colonialism, prostitution, scenes of violence, AIDS and other diseases, political views, and the opinions, feelings, and sensitivities of people, as well as moments of daily life—a visit to the hairdresser, an argument between a husband and his wife, a battle against mosquitoes, and many more quotidian scenes. They also show the humor in some situations.
+
+{% figure 'fig-25-1' %}
 
 The artists used very bright swaths of colors and painted pictures that expressed their own feelings and life experiences. Their messages were clear and direct, and they expressed themselves very simply to make sure that everyone could understand. This popular art is more experimental—and entirely opposed to—academic art, which has many rules and requires formal training. In contrast, the artists who graduated from academies preferred to paint botanical and animal subjects.
 
@@ -74,9 +75,11 @@ You know the working conditions were very bad before. I couldn’t buy any canva
 
 I learned from Jewsiewicki-Koss that the artists had to sell a few paintings a week to survive. Their clients were poor. Jewsiewicki-Koss compared the price of a painting to the price of a few beers. This limited artists’ choice in materials to what they could afford. They worked outside or in indoor areas, mostly using discarded materials that were found locally ([[Debarax 2016]]).
 
-> The supports used in the collection varied from flour sacks and other used fabrics like curtains or tablecloths to torn clothing such as jeans. They were made from different types of yarn: cotton, flax, or hemp, of different thicknesses, density, colors, and states of preservation. There are both small and large-size formats.
->
-> It is impressive that the backs of the paintings contain so much important historical information ([**fig. 25.2**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-2))—and sometimes the faces does as well—showing dates, inscriptions about the purchase, patterns, and brand details such as the trademark on flour sacks. Often the canvas was crudely repaired by the artists, to strengthen the support before painting on it. When the support was already damaged and weakened, these tears form an integral part of the paintings. Fortunately, the unstretched paintings are now preserved in a stable environment and stored flat in large drawers.
+The supports used in the collection varied from flour sacks and other used fabrics like curtains or tablecloths to torn clothing such as jeans. They were made from different types of yarn: cotton, flax, or hemp, of different thicknesses, density, colors, and states of preservation. There are both small and large-size formats.
+
+It is impressive that the backs of the paintings contain so much important historical information ([fig. 25.2](#fig-25-2))—and sometimes the faces does as well—showing dates, inscriptions about the purchase, patterns, and brand details such as the trademark on flour sacks. Often the canvas was crudely repaired by the artists, to strengthen the support before painting on it. When the support was already damaged and weakened, these tears form an integral part of the paintings. Fortunately, the unstretched paintings are now preserved in a stable environment and stored flat in large drawers.
+
+{% figure 'fig-25-2' %}
 
 #### Paint layer and techniques
 
@@ -102,9 +105,9 @@ It was expensive to exhibit my work in galleries, so I often had to display my p
 
 Ange Kumbi[^9]
 
-> The consistent features of these artists’ technique are that the supports are used without any preparation, and they are often frayed; the ground layer is a mixture that cracks quickly; and the paint layer is ink from a printer or composed of a heterogeneous mixture of house paint, palm oil, and other compounds. This combination has considerable potential for rapid degradation. To date, my observations are based on close visual examination, but this has led to a better understanding of the damage. Due to the diverse techniques and materials found, each of the paintings is unique and the alterations and the effects of deterioration differ greatly.
->
-> The paintings have aged and changed quickly over time. They are ephemeral, which is understandable considering the artists’ intent was simply to spread their message and communicate with people through their art. However, this poses a real problem for conservation due to the use of recycled materials, which are not designed to be stable over time and not strong enough to support the variable movement of the materials during handling and climate fluctuations.
+The consistent features of these artists’ technique are that the supports are used without any preparation, and they are often frayed; the ground layer is a mixture that cracks quickly; and the paint layer is ink from a printer or composed of a heterogeneous mixture of house paint, palm oil, and other compounds. This combination has considerable potential for rapid degradation. To date, my observations are based on close visual examination, but this has led to a better understanding of the damage. Due to the diverse techniques and materials found, each of the paintings is unique and the alterations and the effects of deterioration differ greatly.
+
+The paintings have aged and changed quickly over time. They are ephemeral, which is understandable considering the artists’ intent was simply to spread their message and communicate with people through their art. However, this poses a real problem for conservation due to the use of recycled materials, which are not designed to be stable over time and not strong enough to support the variable movement of the materials during handling and climate fluctuations.
 
 ### Supports
 
@@ -124,21 +127,25 @@ During my study, and after seeing the extent of the damage, I decided to focus m
 
 ## Case Study: *Mami Wata* by Nkulu Tommy Emman
 
-The painting chosen from the collection is a depiction of the water spirit Mami Wata ([**fig. 25.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-3)) dating from 1960. It is signed by Nkulu Tommy Emman, an unknown artist. Jewsiewicki-Koss said that the name Nkulu was used by many painters, and it was a common name in Lubumbashi. The artists changed their signatures frequently, which makes attributions complicated. This painting might have been bought by a Congolese owner, probably in the Kasumbalesa market in the Democratic Republic of the Congo. Mami Wata is the goddess of rivers, revered in Congo, other parts of Africa, and in Haiti and Brazil—and feared by fishermen. In the painting she looks like a European mermaid, with white skin and blue eyes, the temptress of Western luxury, her idealistic beauty further signified pictorially by her wristwatch and jewelry.
+The painting chosen from the collection is a depiction of the water spirit Mami Wata ([fig. 25.3](#fig-25-3)) dating from 1960. It is signed by Nkulu Tommy Emman, an unknown artist. Jewsiewicki-Koss said that the name Nkulu was used by many painters, and it was a common name in Lubumbashi. The artists changed their signatures frequently, which makes attributions complicated. This painting might have been bought by a Congolese owner, probably in the Kasumbalesa market in the Democratic Republic of the Congo. Mami Wata is the goddess of rivers, revered in Congo, other parts of Africa, and in Haiti and Brazil—and feared by fishermen. In the painting she looks like a European mermaid, with white skin and blue eyes, the temptress of Western luxury, her idealistic beauty further signified pictorially by her wristwatch and jewelry.
 
-> The painting is executed on a thin cotton support patterned with flowers and measures 83 x 54 cm. Some information is written on the back: numbers, details of acquisitions, and notes ([**fig. 25.4**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-4)). The paint layer appears to be acrylic that was thinly applied. There is no ground layer, varnish, or stretcher. It is currently stored and laid flat in a sliding drawer.
+{% figure 'fig-25-3' %}
+
+The painting is executed on a thin cotton support patterned with flowers and measures 83 x 54 cm. Some information is written on the back: numbers, details of acquisitions, and notes ([fig. 25.4](#fig-25-4)). The paint layer appears to be acrylic that was thinly applied. There is no ground layer, varnish, or stretcher. It is currently stored and laid flat in a sliding drawer.
+
+{% figure 'fig-25-4' %}
 
 ### State of Preservation
 
-A large area of the support was missing from the upper right corner, making handling a difficult problem. There were also many rusted punctures due to the nails used to hang it. The edges and corners were frayed. There were some small tears to mend, lacunae in the paint layer, and some surface imperfections on the front side. The painting was grimy, there were a lot of cracks, and the canvas was distorted. The painting needed to be cleaned and lined (see [**fig. 25.4**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-4)). The fact that we needed to keep the inscriptions on the back visible precipitated my research into transparent lining.
+A large area of the support was missing from the upper right corner, making handling a difficult problem. There were also many rusted punctures due to the nails used to hang it. The edges and corners were frayed. There were some small tears to mend, lacunae in the paint layer, and some surface imperfections on the front side. The painting was grimy, there were a lot of cracks, and the canvas was distorted. The painting needed to be cleaned and lined (see [fig. 25.4](#fig-25-4)). The fact that we needed to keep the inscriptions on the back visible precipitated my research into transparent lining.
 
 ### Transparent Lining: Past and Continuing Research
 
 Some of the past research about transparent lining provided me with valuable information. In Knut Nicolaus’s book, we read that in 1961 Boissonnas[^10] proposed the use of fiberglass with a wax-resin lining or with Beva 371 ([[Nicolaus 1999]]). But fiberglass has some disadvantages: it is not stretchy enough, and it is almost impossible to repair holes or damage to the substrate. In 1981, Pacoud-Reme, with “three types of transparent linings done by G. Ten Kate for the paintings for the National Museum,” tested the fiberglass canvas with wax resin and a rigid support of methyl methacrylate ([[Pacoud-Reme 1981]]). In 1996, Berger referenced different kinds of synthetic canvases, such as Pe-Cap (polyester monofilament screen), but they were not transparent enough ([[Berger 1996]]).
 
-> In 2015, I followed the research by Marion Guillermin at Olivier Nouaille’s studio in Paris ([[Guillermin 2012]]). She used Petex[^11] (polyester PET) and Nitex[^12] (nylon PA), synthetic canvases that are monofilament open mesh fabrics from Sefar Inc.[^13] From the material properties provided by the manufacturer, both are stable in solvents. For abrasion and alkaline resistance, Nitex is better, whereas Petex is more resistant to acid. Unfortunately, their stability to light exposure is poor. However, the synthetic canvases are thin, elastic, easy to use, and almost completely transparent. Guillermin tested them with natural glue, but she didn’t apply her tests to real paintings.
->
-> For the paintings in the Africa Museum’s collection, I eliminated natural adhesives and traditional canvases due to their yellowing tendency and their lack of transparency, opting for the Sefar synthetic canvases and synthetic adhesives. The aim was to find a lining with the necessary compatibility with the materials used in the paintings. The lining fabric had to be transparent, reversible, resistant to solvents, elastic, and inert (like Petex and Nitex), and the adhesive needed to be stable and reversible, transparent after drying, and easy to apply, such as Beva 371 Film (65 µm) or Plextol B500 synthetic adhesive. One of the issues was to find a technique that did not smudge the ink on the back of the painting.
+In 2015, I followed the research by Marion Guillermin at Olivier Nouaille’s studio in Paris ([[Guillermin 2012]]). She used Petex[^11] (polyester PET) and Nitex[^12] (nylon PA), synthetic canvases that are monofilament open mesh fabrics from Sefar Inc.[^13] From the material properties provided by the manufacturer, both are stable in solvents. For abrasion and alkaline resistance, Nitex is better, whereas Petex is more resistant to acid. Unfortunately, their stability to light exposure is poor. However, the synthetic canvases are thin, elastic, easy to use, and almost completely transparent. Guillermin tested them with natural glue, but she didn’t apply her tests to real paintings.
+
+For the paintings in the Africa Museum’s collection, I eliminated natural adhesives and traditional canvases due to their yellowing tendency and their lack of transparency, opting for the Sefar synthetic canvases and synthetic adhesives. The aim was to find a lining with the necessary compatibility with the materials used in the paintings. The lining fabric had to be transparent, reversible, resistant to solvents, elastic, and inert (like Petex and Nitex), and the adhesive needed to be stable and reversible, transparent after drying, and easy to apply, such as Beva 371 Film (65 µm) or Plextol B500 synthetic adhesive. One of the issues was to find a technique that did not smudge the ink on the back of the painting.
 
 ### Accelerated Aging and Tensile Tests
 
@@ -148,17 +155,23 @@ After the period of exposure in the Climacell, noticeable changes were observed 
 
 ### Treatment of the Painting
 
-To prepare for the lining, the face of the painting was treated (see [**fig. 25.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-3)). The first step was to smooth out local distorted areas using moisture, pressure, and heat, in particular on the face and around the edges. Afterward, I removed the dirt and dust and cleaned the paint layer with swabs moistened with demineralized water. The reverse was cleaned with a dry latex sponge.
+To prepare for the lining, the face of the painting was treated (see [fig. 25.3](#fig-25-3)). The first step was to smooth out local distorted areas using moisture, pressure, and heat, in particular on the face and around the edges. Afterward, I removed the dirt and dust and cleaned the paint layer with swabs moistened with demineralized water. The reverse was cleaned with a dry latex sponge.
 
-For the lining, I laid the Petex on the hot table with one layer of Beva 371 Film (65 µ), cut to the same dimensions as the painting. These two coats were heated for 25 minutes at 65°C then I let them cool down to seal them. Next, I carefully positioned the original painting on the synthetic layers (Petex and Beva 371 Film) and heated it at the same temperature and for the same duration. This treatment was successful. The lining is thin, easy to apply, transparent, and resistant to degradation over time (**[figs. 25.5](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-5), [25.6](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-6)**).
+For the lining, I laid the Petex on the hot table with one layer of Beva 371 Film (65 µ), cut to the same dimensions as the painting. These two coats were heated for 25 minutes at 65°C then I let them cool down to seal them. Next, I carefully positioned the original painting on the synthetic layers (Petex and Beva 371 Film) and heated it at the same temperature and for the same duration. This treatment was successful. The lining is thin, easy to apply, transparent, and resistant to degradation over time ([figs. 25.5](#fig-25-5), [25.6](#fig-25-6)).
 
-As a last step, I continued with the restoration: filling lacuna with the synthetic compound Modostuc and texturing some of the losses. The retouches were made with Gamblin Conservation Colors. From now on, the painting can be handled safely and easily. The support is consolidated, and the extra layer supports the whole painting without hiding the inscriptions ([**fig. 25.7**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/25-Desbarax/fig-25-7)).
+{% figure 'fig-25-5' %}
+
+{% figure 'fig-25-6' %}
+
+As a last step, I continued with the restoration: filling lacuna with the synthetic compound Modostuc and texturing some of the losses. The retouches were made with Gamblin Conservation Colors. From now on, the painting can be handled safely and easily. The support is consolidated, and the extra layer supports the whole painting without hiding the inscriptions ([fig. 25.7](#fig-25-7)).
+
+{% figure 'fig-25-7' %}
 
 ## Conclusion
 
 The Africa Museum’s collection is a fascinating and interesting study due to the many characteristics and issues involved. The most important problem to solve was safe handling, which is why the research concentrated on the structural treatment. The trial samples in cotton made with the transparent canvases Petex and Nitex, Plextol B500, and Beva 371 Film were assessed using accelerated aging and tensile tests to discover the strength and the sustainability of these materials. Beva 371 Film with Petex showed good properties. The results obtained were determined through the treatment of one of the paintings from the collection, and it worked very well.
 
-> As this conservation treatment was unusual and atypical, this research allowed me to question my views on traditional methods of conservation and restoration. It also underlined the importance of painting materials and the importance of handling artworks with care for their future preservation. Today, restoring contemporary art is all about research and innovation, and we will always have to battle with ethics to find the best way to restore a painting. It was challenging to treat this ephemeral painting, and I gave it my best.
+As this conservation treatment was unusual and atypical, this research allowed me to question my views on traditional methods of conservation and restoration. It also underlined the importance of painting materials and the importance of handling artworks with care for their future preservation. Today, restoring contemporary art is all about research and innovation, and we will always have to battle with ethics to find the best way to restore a painting. It was challenging to treat this ephemeral painting, and I gave it my best.
 
 ## Acknowledgments
 
