add images to 26

--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -24,7 +24,9 @@ A series of mid-eighteenth-century easel paintings depicting eleven apostles, Sa
 
 The paintings, which appear to be the work of a single artist, date from Mexico’s Viceregal period, and it is important to consider them in that context. The Spanish arrived in the Mexican territory in 1519, and two years later conquered the Aztec empire. In 1524, the Franciscans reached the Americas—starting the Catholic evangelization process in the former Aztec capital of Mexico-Tenochtitlan (now Mexico City) and surrounding territories ([[López Mora 2011\|, 14]]).
 
-Immediately after their arrival, the Franciscans started the evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([**fig. 26.1**](file:///Users/rbarth/Desktop/fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during eighteenth century ([[Ramírez Montes 2001]]\|, 106).
+Immediately after their arrival, the Franciscans started the evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([fig. 26.1](#fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during eighteenth century ([[Ramírez Montes 2001]]\|, 106).
+
+{% figure 'fig-26-1' %}
 
 ## The Apostolate Series
 
@@ -32,7 +34,9 @@ We restored the apostolate easel paintings from June to November of 2018, during
 
 The opportunity to analyze a pictorial set painted by a single anonymous author—not just a single painting—was remarkable. Among the advantages that a group of works such as this presented us were summarized by conservator and researcher Elsa Arroyo when she said, “The artistic process and the way the materials were prepared for each strata of the paintings are indicative factors of the tradition of every artist and workshop of New Spain; therefore, technical studies are more relevant when they consider analysis of pictorial series, from the same artist or from the same context” ([[Arroyo Lemus 2017\|, 42]]).
 
-The series represents the apostles with the instruments of their martyrdoms: Saint Peter, Saint Andrew, Saint James the Greater, Saint James the Lesser, Saint Bartholomew, Saint Philip, Saint John, Saint Jude Thaddeus, Saint Matthew, Saint Simon, and Saint Thomas. In addition to the apostles, Saint Paul, the Virgin Mary, and Jesus Christ were also painted. After cleaning the paintings, we realized that each included a part of the Apostles’ Creed. According to a legend based on the Acts of the Apostles, while gathered for Pentecost, they began to recite each of the articles of the Creed one by one ([[Schäfer 1983\|, 14]]) ([**fig. 26.2**](file:///Users/rbarth/Desktop/fig-26-2)). (In addition to this series, a painting of Pentecost by Antonio de Torres hangs in the church, completing the discourse, even though it is the work of a different painter.)
+The series represents the apostles with the instruments of their martyrdoms: Saint Peter, Saint Andrew, Saint James the Greater, Saint James the Lesser, Saint Bartholomew, Saint Philip, Saint John, Saint Jude Thaddeus, Saint Matthew, Saint Simon, and Saint Thomas. In addition to the apostles, Saint Paul, the Virgin Mary, and Jesus Christ were also painted. After cleaning the paintings, we realized that each included a part of the Apostles’ Creed. According to a legend based on the Acts of the Apostles, while gathered for Pentecost, they began to recite each of the articles of the Creed one by one ([[Schäfer 1983\|, 14]]) ([fig. 26.2](#fig-26-2)). (In addition to this series, a painting of Pentecost by Antonio de Torres hangs in the church, completing the discourse, even though it is the work of a different painter.)
+
+{% figure 'fig-26-2' %}
 
 The paintings all correspond with each other aesthetically and technically, and also share the same basic materials. In each painting, the character appears full-length and occupying the foreground and most of the composition. This type of representation recalls the way in which the Spanish painter Francisco de Zurbarán painted some of his characters, and it stands as one of the key features inherited from the Spanish pictorial tradition.
 
@@ -40,7 +44,11 @@ The paintings all correspond with each other aesthetically and technically, and 
 
 The artist began the composition and the coloring of the paintings on the reddish iron oxide ground layer. The brushstrokes are soft, and the artist used glazes in dark tones and more painting in the light colors despite the fact that the pictorial layer is very thin and has no impastos. As well as these features, the way in which the compositions were solved, along with the technical and pictorial sequence, correspond to eighteenth-century painting production ([[Mues Orts 2017\|, 57]]). Among the material evidence that helped us date the paintings is the presence of Prussian blue.[^3] Although it is unknown when the pigment was first used in New Spain, a painting studied by the Diagnostic Laboratory of Works of Art at the National University of Mexico evidenced its presence by the mid-eighteenth century ([[Zavala Cabello 2013\|, 144]]). This anonymous series is also similar in painting technique to the works of contemporary artists such as Miguel Cabrera, José de Alzibar, Francisco Vallejo, and Patricio Morlete.
 
-As some researchers have pointed out, information is lacking about the practice of painters in documents, so approaching the subject through material analysis is the best way to expand knowledge of New Spanish artists’ techniques ([[Mues Orts 2017\|, 57]]). For this reason, during the restoration we collected all the information we could about the paintings’ materials and technique: they have the same format and measurements, stratigraphy—strainers, priming layers, color layers, and varnishes—and chromatic palette. All the paintings have a linen textile support attached with animal glue to the edge of wooden strainers composed of five elements ([**fig. 26.3**](file:///Users/rbarth/Desktop/fig-26-3)). About 12 x 11 threads per square centimeter form the fabric, and there is a Z-twist in the threads in both warp and weft ([**fig. 26.4**](file:///Users/rbarth/Desktop/fig-26-4)).
+As some researchers have pointed out, information is lacking about the practice of painters in documents, so approaching the subject through material analysis is the best way to expand knowledge of New Spanish artists’ techniques ([[Mues Orts 2017\|, 57]]). For this reason, during the restoration we collected all the information we could about the paintings’ materials and technique: they have the same format and measurements, stratigraphy—strainers, priming layers, color layers, and varnishes—and chromatic palette. All the paintings have a linen textile support attached with animal glue to the edge of wooden strainers composed of five elements ([fig. 26.3](#fig-26-3)). About 12 x 11 threads per square centimeter form the fabric, and there is a Z-twist in the threads in both warp and weft ([fig. 26.4](#fig-26-4)).
+
+{% figure 'fig-26-3' %}
+
+{% figure 'fig-26-4' %}
 
 We also noted very specific information regarding the technical and material challenges our mid-eighteenth-century artist faced and solved, specifically the relation of the textile support to other elements of the paintings, including the following:
 
@@ -48,9 +56,11 @@ We also noted very specific information regarding the technical and material cha
 
 -   He also had to stitch together two different pieces of fabric to achieve the desired size to fit the strainer. All the paintings measure 160 x 120 cm.
 
--   Twelve of the paintings have regular patterns of perforations and marks made with iron gall ink ([**fig. 26.5**](file:///Users/rbarth/Desktop/fig-26-5)).
+-   Twelve of the paintings have regular patterns of perforations and marks made with iron gall ink ([fig. 26.5](#fig-26-5)).
 
 -   All the perforations and sewing were covered with cotton-rag paper by the artist.
+
+{% figure 'fig-26-5' %}
 
 After registering all these characteristics and doing additional research, we realized that the analysis of canvases had not been granted the importance it deserves. For example, many invasive processes have been carried out unnecessarily, such as wax-resin relining, practiced in Mexico since the 1970s, which resulted in important information being hidden or lost. The same thing happened to the original strainers: in almost every conservation treatment applied to a painting, they were discarded and a new one was substituted.
 
@@ -80,7 +90,9 @@ We started by cleaning the surface of the canvas by removing dust and debris usi
 
 Most of the canvases had deformations. To eliminate them, we applied moisture and pressure, allowing it to return to its original flat state.
 
-The corrosive nature of the iron gall ink markings on the back of the supports caused some deterioration and tears in the textile. To care for this damage we had to find a method that allowed for the stabilization of the canvas without covering the information of the marks ([**fig. 26.6a**](file:///Users/rbarth/Desktop/fig-26-6)). We used silk crepeline, with Beva as an adhesive. As a thin, transparent textile with good mechanical resistance, the silk crepeline made it possible to conserve both the materials and the information ([**fig. 26.6b**](file:///Users/rbarth/Desktop/fig-26-6)).[^5] Finally, for the holes of the paintings without iron-gall ink marks, we used linen patches with frayed edges, adhered with glue paste.
+The corrosive nature of the iron gall ink markings on the back of the supports caused some deterioration and tears in the textile. To care for this damage we had to find a method that allowed for the stabilization of the canvas without covering the information of the marks ([fig. 26.6a](#fig-26-6-a)). We used silk crepeline, with Beva as an adhesive. As a thin, transparent textile with good mechanical resistance, the silk crepeline made it possible to conserve both the materials and the information ([fig. 26.6b](#fig-26-6-b)).[^5] Finally, for the holes of the paintings without iron-gall ink marks, we used linen patches with frayed edges, adhered with glue paste.
+
+{% figuregroup '2' 'fig-26-6-a, fig-26-6-b' %}
 
 ## Conclusion
 
